fixed left alignment of morpheme cells

--- a/ijal.css
+++ b/ijal.css
@@ -86,7 +86,7 @@
   margin-bottom: 2px;
   padding: 3px;
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   }
 
 button{
